With net.ssl.allowConnectionsWithoutCertificates: true, allow disabling no client certificate log warnings

XMLWordPrintableJSON

    • Fully Compatible
    • v4.0, v3.6, v3.4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When net.ssl.allowConnectionsWithoutCertificates: true every client connection using no SSL certificate produces a warning message in the log:

      2016-XX-XXTXX:XX:XX.XXX+0000 W NETWORK [connXXXX] no SSL certificate provided by peer
      

      It would be nice if it is possible to suppress those warnings, as SSL connections with no client certificates are enabled explicitly by setting net.ssl.allowConnectionsWithoutCertificates: true.

            Assignee:
            Adam Cooper (Inactive)
            Reporter:
            Emilio Scalise
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: