SERVER-27264 Allow disabling no client certificate warning